# superclean

./: .gitignore  Makefile  README.md  SPEC.md  pyproject.toml
src/superclean/: core.py  main.py
src/superclean/cleaners/: dev_tools.py  docker_nix.py  python_node.py  system.py  utilities.py
tests/: test_core.py
