[project]
name = "superclean"
version = "0.1.2"
description = "A universal CLI tool to clean development caches and reclaim disk space."
authors = [{ name = "Nguyen Huy", email = "nguyenhuy158@gmail.com" }]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
sclean = "superclean.main:app"
superclean = "superclean.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
