[project]
name = "superclean"
version = "0.4.0"
description = "A universal CLI tool to clean development caches and reclaim disk space."
authors = [{ name = "Nguyen Huy", email = "nguyenhuy158@gmail.com" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
sclean = "superclean.main:app"
superclean = "superclean.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
